--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,14 +1,20 @@
 @import './nullstyle.scss';
 @import './variables.scss';
+@import './button.scss';
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.24px;
   background: $backgroundColor;
 }
 
 .wrapper {
-  max-width: 1400px;
   margin: 50px auto;
-  padding: 15px 10px;
-  height: 100%;
-  background-color: #fff;
+  height: 500px;
+  background-color: $whiteColor;
+  max-width: 1400px;
+  width: calc(100vw - 100px);
 }
