--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -17,4 +17,6 @@ body {
   background-color: $whiteColor;
   max-width: 1400px;
   width: calc(100vw - 100px);
+  border-radius: 10px;
+  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.03);
 }
