--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -5,7 +5,7 @@ $blackColor: #000;
 $primaryHoverColor: #07811b;
 $grayColor: #7b7b7b;
 $opacityWhiteColor: rgba(255, 255, 255, 0.5);
-$lightGrayColor: #dfdfdf;
+$lightGrayColor: #f5f5f5;
 $backgroundColor: linear-gradient(
   90deg,
   rgba(252, 176, 69, 1) 0%,
