--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -20,3 +20,9 @@ body {
   border-radius: 10px;
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.03);
 }
+
+.container {
+  margin: 0 auto;
+  width: 91%;
+  padding: 0px 10px;
+}
