--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,17 +1,15 @@
 @import '../../style/variables.scss';
 
 .header {
+  padding: 40px 0px;
+  margin-bottom: 80px;
   display: flex;
-  align-items: center;
   border-bottom: 1px solid $grayColor;
-  padding-bottom: 40px;
 
-  .container {
-    column-gap: 15px;
-    width: 100%;
+  &__content {
     display: flex;
+    column-gap: 10px;
     justify-content: space-between;
-    padding: 40px 38px 0px 77px;
   }
 
   &__logo {
@@ -23,14 +21,14 @@
   }
 
   h1 {
-    color: #181818;
+    color: $blackColor;
     font-size: 24px;
     font-weight: 800;
     text-transform: uppercase;
   }
 
   p {
-    color: #7b7b7b;
+    color: $grayColor;
     font-weight: 400;
   }
 }
