--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -1,31 +1,38 @@
 @import './variables.scss';
 
-.header__basket {
+.button {
   display: flex;
-  width: 150px;
-  height: 50px;
+  align-items: center;
   border-radius: 30px;
-  background: #fe5f1e;
+  background: $primaryColor;
+  padding: 15px 23px;
 
-  &-button {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    padding: 15px 25px;
+  &__header {
+    span {
+      color: $whiteColor;
+    }
+
+    img {
+      margin-right: 8px;
+    }
+
+    &-delimiter {
+      margin: 0px 15px;
+      width: 1px;
+      height: 25px;
+      background: rgba(255, 255, 255, 0.25);
+    }
   }
 
-  &-delimiter {
-    margin: 0px 15px;
-    width: 1px;
-    height: 25px;
-    background: rgba(255, 255, 255, 0.25);
-  }
-
-  span {
-    color: $whiteColor;
-  }
-
-  img {
-    margin-right: 8px;
+  &__pizza {
+    border: 1px solid $primaryColor;
+    background: #fff;
+    &-icon {
+      margin-right: 8px;
+    }
+    &-text {
+      color: $primaryColor;
+      font-size: 16px;
+    }
   }
 }
