--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -23,7 +23,7 @@
     text-align: center;
     font-weight: 700;
     padding: 15px 30px;
-    transition: all 0.3s ease;
+    transition: all 0.3s ease-in;
 
     &:hover {
       color: $whiteColor;
