refactor: moving the code to the right place

--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -25,6 +25,10 @@
     }
   }
 
+  &__header:hover {
+    background-color: $primaryHoverColor;
+  }
+
   &__pizza {
     border: 1px solid $primaryColor;
     background-color: $whiteColor;
