--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -6,21 +6,38 @@
 
   &__list {
     display: flex;
+    column-gap: 10px;
+  }
+  
+  &__list-item {
+    display: flex;
     align-items: center;
-    gap: 10px;
+  }
 
-    a {
-      padding: 8px;
-      font-size: 20px;
-      border: 1px solid $primaryColor;
-      color: $primaryColor;
-    }
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    font-size: 18px;
+    border: 1px solid $primaryColor;
+    color: $primaryColor;
+    padding: 10px;
+  }
+
+  &__link:hover {
+    transition: all 0.6s ease;
+    color: $whiteColor;
+    background-color: $primaryHoverColor;
   }
 }
 
-.previous {
-}
-.selected {
-}
+.previous,
 .next {
+  font-size: 14px;
+}
+
+.selected {
+  color: $whiteColor;
+  background-color: $primaryColor;
 }
