add keyframe animation for popup

--- a/src/components/Sort/Sort.scss
+++ b/src/components/Sort/Sort.scss
@@ -38,6 +38,7 @@
     font-size: 14px;
     font-weight: 400;
     text-align: center;
+    animation: popupAnimation 0.5s forwards;
 
     li {
       padding: 10px 0px;
