--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -28,8 +28,10 @@ body {
 @keyframes popupAnimation {
   from {
     top: -300%;
+    opacity: 0;
   }
   to {
     top: 26px;
+    opacity: 1;
   }
 }
