--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -3,9 +3,10 @@
 .button {
   display: flex;
   align-items: center;
+  font-weight: 700;
   border-radius: 30px;
   background-color: $primaryColor;
-  padding: 12px 18px;
+  padding: 12px 16px;
   transition: all 0.4s ease;
 
   &__header {
@@ -95,6 +96,19 @@
         border: 1px solid $whiteColor;
         background: $whiteColor;
       }
+    }
+  }
+
+  &__cart-empty {
+    background: $darkGrayColor;
+    padding: 16px 50px;
+    margin: 0px auto;
+
+    span {
+      color: $whiteColor;
+      text-align: center;
+      font-style: normal;
+      letter-spacing: 0.24px;
     }
   }
 }
