--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -20,9 +20,10 @@ body {
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.03);
 }
 
-.container {
+.content {
+  width: 92.2%;
   margin: 0 auto;
-  width: 92.5%;
+  padding: 40px 0px;
 }
 
 @keyframes popupAnimation {
