--- a/src/components/CartEmpty/CartEmpty.scss
+++ b/src/components/CartEmpty/CartEmpty.scss
@@ -1,7 +1,8 @@
 @import '../../style/variables.scss';
 
 .cart-empty {
-  padding: 20px 0px;
+  padding-bottom: 50px;
+  margin-top: -25px;
 
   &__body {
     max-width: 550px;
