--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
 .header {
   padding: 40px 60px;
   margin-bottom: 10px;
-  border-bottom: 1px solid $grayColor;
+  border-bottom: 1px solid $lineGrayColor;
 
   &__content {
     display: flex;
