--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,3 +1,5 @@
+@import '../../style/variables.scss';
+
 .search {
   display: flex;
   position: relative;
@@ -16,6 +18,6 @@
     height: 50px;
     border-radius: 10px;
     padding: 12px 20px 12px 42px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid $lineGrayColor;
   }
 }
