--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -4,6 +4,7 @@ $darkGrayColor: #2c2c2c;
 $blackColor: #000;
 $primaryHoverColor: saturate($primaryColor, 30%);
 $grayColor: #7b7b7b;
+$lineGrayColor: rgba(0, 0, 0, 0.1);
 $opacityWhiteColor: rgba(255, 255, 255, 0.5);
 $lightGrayColor: #f5f5f5;
 $backgroundColor: linear-gradient(
