fix position popup

--- a/src/components/Sort/Sort.scss
+++ b/src/components/Sort/Sort.scss
@@ -29,11 +29,10 @@
 
   &__popup {
     position: absolute;
-    left: 114px;
+    right: 0px;
     z-index: 5;
     background-color: $whiteColor;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
-    width: 132px;
     border-radius: 10px;
     font-size: 14px;
     font-weight: 400;
@@ -41,7 +40,7 @@
 
     li {
       transition: all 0.2s linear;
-      padding: 10px 0px 10px 14px;
+      padding: 10px 10px;
     }
 
     li:first-child {
