controlled input and clear input

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,7 +8,7 @@ body {
   font-weight: 700;
   line-height: normal;
   letter-spacing: 0.24px;
-  background: $backgroundColor;
+  background-color: $lightGrayColor;
   overflow-y: scroll;
 }
 
