--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -2,7 +2,9 @@
 
 .search {
   display: flex;
+  align-items: center;
   position: relative;
+  width: 400px;
 
   &__icon {
     width: 22px;
@@ -10,14 +12,32 @@
     opacity: 0.3;
     position: absolute;
     left: 12px;
-    top: 14px;
   }
 
   &__input {
-    max-width: 300px;
+    font-size: 16px;
+    width: 100%;
     height: 50px;
     border-radius: 10px;
-    padding: 12px 20px 12px 42px;
+    padding: 12px 40px;
     border: 1px solid $lineGrayColor;
+
+    &:focus {
+      border-color: rgba($lineGrayColor, 0.3);
+    }
+
+    &-clear {
+      position: absolute;
+      width: 22px;
+      height: 22px;
+      right: 12px;
+      cursor: pointer;
+      transition: all 0.3s linear;
+
+      &:hover {
+        opacity: 0.8;
+        transform: rotate(90deg);
+      }
+    }
   }
 }
