fix responsive img

--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -20,6 +20,9 @@
     font-style: normal;
 
     img {
+      height: 31px;
+      width: 31px;
+      object-fit: contain;
       margin-right: 15px;
     }
   }
