--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -17,16 +17,23 @@
     display: flex;
     align-items: center;
     width: 60%;
-    transition: all 0.2s ease;
     cursor: pointer;
 
     &:hover {
-      transform: scale(1.05);
+      .cart__item-img {
+        transform: scale(1.1);
+      }
     }
   }
 
   &-img {
     margin-right: 15px;
+    transition: all 0.2s ease;
+
+    img {
+      height: 80px;
+      width: 80px;
+    }
   }
 
   &-info {
