--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,6 +16,9 @@
     transition: 0.3s ease-in-out;
 
     img {
+      width: 38px;
+      height: 51px;
+      object-fit: contain;
       margin-right: 17px;
       object-fit: contain;
       transition: 0.3s;
