fix: button jerking

--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -60,12 +60,13 @@
   }
 
   &-count {
+    width: 28%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     p {
       font-size: 20px;
-      margin: 0px 8px;
     }
   }
 
