--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -135,6 +135,10 @@
         color: $whiteColor;
       }
     }
+
+    &:active {
+      transform: translateY(2px);
+    }
   }
 
   &__full-pizza {
