fix: ban the reduction of product less than 1 in the cart

--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -165,6 +165,20 @@
       display: inline-block;
       margin-bottom: 2px;
     }
+
+    &:disabled {
+      opacity: 0.4;
+      transform: none;
+      border-color: $grayColor;
+
+      &:hover {
+        background-color: transparent;
+      }
+
+      span {
+        color: $grayColor;
+      }
+    }
   }
 
   &-count-plus {
