--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -120,6 +120,9 @@
   }
 
   &__cart-circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 32px;
     height: 32px;
     background-color: $whiteColor;
@@ -184,7 +187,7 @@
   &-count-plus {
     span {
       display: inline-block;
-      margin-top: 2px;
+      margin-top: -1px;
     }
   }
 
@@ -194,7 +197,7 @@
 
     span {
       display: inline-block;
-      margin-top: 2px;
+      margin-top: -1px;
     }
 
     &:hover {
