--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,7 +3,7 @@
 @import './button.scss';
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: normal;
