--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,19 +1,45 @@
 @import '../../style/variables.scss';
 
 .header {
-  padding: 40px 60px;
+  padding: 35px 60px;
   margin-bottom: 10px;
   border-bottom: 1px solid $lineGrayColor;
+
+  @media (max-width: 1299px) {
+    padding: 25px 43px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 15px 23px;
+  }
+
+  @media (max-width: 575px) {
+    padding: 12px 6px 15px;
+  }
 
   &__content {
     display: flex;
     column-gap: 10px;
     justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 1024px) {
+      flex-wrap: wrap;
+    }
+
+    @media (max-width: 575px) {
+      flex-direction: column;
+    }
   }
 
   &__logo {
+    position: relative;
     display: flex;
     transition: 0.3s ease-in-out;
+
+    @media (max-width: 575px) {
+      text-align: center;
+    }
 
     img {
       width: 38px;
@@ -22,6 +48,27 @@
       margin-right: 17px;
       object-fit: contain;
       transition: 0.3s;
+
+      @media (max-width: 767px) {
+        width: 25px;
+        height: 36px;
+        margin-right: 7px;
+      }
+
+      @media (max-width: 575px) {
+        position: absolute;
+        width: 17px;
+        height: 32px;
+        top: -4px;
+        left: 35px;
+      }
+
+      @media (max-width: 340px) {
+        left: 30px;
+      }
+      @media (max-width: 330px) {
+        left: 26px;
+      }
     }
 
     &:hover {
@@ -38,10 +85,31 @@
     font-size: 24px;
     font-weight: 800;
     text-transform: uppercase;
+
+    @media (max-width: 767px) {
+      font-size: 20px;
+    }
+
+    @media (max-width: 575px) {
+      font-size: 18px;
+      margin-bottom: 5px;
+    }
   }
 
   &__subtitle {
     color: $grayColor;
     font-weight: 400;
+
+    @media (max-width: 767px) {
+      font-size: 14px;
+    }
+  }
+
+  &__basket {
+    margin: 15px 0px;
+
+    @media (max-width: 575px) {
+      margin: 10px 0px;
+    }
   }
 }
