--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -6,6 +6,15 @@
   position: relative;
   width: 400px;
 
+  @media (max-width: 1299px) {
+    width: 320px;
+  }
+
+  @media (max-width: 1024px) {
+    width: 100%;
+    order: 3;
+  }
+
   &__icon {
     width: 22px;
     height: 22px;
@@ -21,6 +30,11 @@
     border-radius: 10px;
     padding: 12px 40px;
     border: 1px solid $lineGrayColor;
+
+    @media (max-width: 767px) {
+      font-size: 14px;
+      height: 40px;
+    }
 
     &:focus {
       border-color: rgba($lineGrayColor, 0.3);
