--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -9,9 +9,21 @@
   padding: 12px 16px;
   transition: all 0.4s ease;
 
+  @media (max-width: 767px) {
+    padding: 9px 13px;
+  }
+
+  @media (max-width: 575px) {
+    padding: 7px 11px;
+  }
+
   &__header {
     span {
       color: $whiteColor;
+
+      @media (max-width: 767px) {
+        font-size: 14px;
+      }
     }
 
     img {
