--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -22,15 +22,33 @@ body {
 }
 
 .content {
-  width: 92.2%;
-  margin: 0 auto;
-  padding: 40px 0px;
+  padding: 40px 50px 40px;
+
+  @media (max-width: 1299px) {
+    padding: 30px 40px 30px;
+  }
+
+  @media (max-width: 1024px) {
+    padding: 20px 30px 20px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 10px 20px 10px;
+  }
+
+  @media (max-width: 575px) {
+    padding: 10px 20px 10px;
+  }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 35px;
+
+    @media (max-width: 1299px) {
+      flex-direction: column;
+    }
   }
 }
 
