--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -200,6 +200,7 @@
     span {
       display: inline-block;
       margin-top: -1px;
+      margin-left: 1px;
     }
   }
 
@@ -210,6 +211,7 @@
     span {
       display: inline-block;
       margin-top: -1px;
+      margin-left: 1px;
     }
 
     &:hover {
