--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,20 +1,24 @@
 @import '../../style/variables.scss';
 
 .header {
-  padding: 35px 60px;
+  padding: 50px 60px 35px;
   margin-bottom: 10px;
   border-bottom: 1px solid $lineGrayColor;
 
   @media (max-width: 1299px) {
-    padding: 25px 43px;
+    padding: 40px 40px 35px;
   }
 
   @media (max-width: 767px) {
-    padding: 15px 23px;
+    padding: 30px 30px 25px;
   }
 
   @media (max-width: 575px) {
-    padding: 12px 6px 15px;
+    padding: 30px 20px 25px;
+  }
+
+  @media (max-width: 479px) {
+    padding: 20px 15px;
   }
 
   &__content {
@@ -27,17 +31,17 @@
       flex-wrap: wrap;
     }
 
-    @media (max-width: 575px) {
+    @media (max-width: 479px) {
       flex-direction: column;
     }
   }
 
   &__logo {
-    position: relative;
     display: flex;
+    align-items: center;
     transition: 0.3s ease-in-out;
 
-    @media (max-width: 575px) {
+    @media (max-width: 479px) {
       text-align: center;
     }
 
@@ -56,18 +60,12 @@
       }
 
       @media (max-width: 575px) {
-        position: absolute;
-        width: 17px;
-        height: 32px;
-        top: -4px;
-        left: 35px;
+        width: 20px;
+        height: 30px;
       }
 
-      @media (max-width: 340px) {
-        left: 30px;
-      }
-      @media (max-width: 330px) {
-        left: 26px;
+      @media (max-width: 479px) {
+        display: none;
       }
     }
 
@@ -89,11 +87,6 @@
     @media (max-width: 767px) {
       font-size: 20px;
     }
-
-    @media (max-width: 575px) {
-      font-size: 18px;
-      margin-bottom: 5px;
-    }
   }
 
   &__subtitle {
@@ -106,10 +99,8 @@
   }
 
   &__basket {
-    margin: 15px 0px;
-
-    @media (max-width: 575px) {
-      margin: 10px 0px;
+    @media (max-width: 479px) {
+      margin: 10px 0px 15px;
     }
   }
 }
