--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -19,6 +19,26 @@ body {
   width: calc(100vw - 100px);
   border-radius: 10px;
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.03);
+
+  @media (max-width: 1299px) {
+    margin: 40px auto;
+    width: calc(100vw - 80px);
+  }
+
+  @media (max-width: 1024px) {
+    margin: 30px auto;
+    width: calc(100vw - 60px);
+  }
+
+  @media (max-width: 767px) {
+    margin: 20px auto;
+    width: calc(100vw - 40px);
+  }
+
+  @media (max-width: 575px) {
+    margin: 10px auto;
+    width: calc(100vw - 20px);
+  }
 }
 
 .content {
@@ -28,12 +48,8 @@ body {
     padding: 30px 40px 30px;
   }
 
-  @media (max-width: 1024px) {
-    padding: 20px 30px 20px;
-  }
-
   @media (max-width: 767px) {
-    padding: 10px 20px 10px;
+    padding: 20px 30px 20px;
   }
 
   @media (max-width: 575px) {
