--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -4,6 +4,10 @@
   margin-left: 12px;
   margin-bottom: 25px;
 
+  @media (max-width: 479px) {
+    margin-bottom: 12px;
+  }
+
   ul {
     display: flex;
     align-items: center;
