--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -48,12 +48,12 @@ body {
     padding: 30px 40px 30px;
   }
 
-  @media (max-width: 767px) {
+  @media (max-width: 1024px) {
     padding: 20px 30px 20px;
   }
 
   @media (max-width: 575px) {
-    padding: 10px 20px 10px;
+    padding: 10px;
   }
 
   &__top {
@@ -64,6 +64,10 @@ body {
 
     @media (max-width: 1299px) {
       flex-direction: column;
+    }
+
+    @media (max-width: 479px) {
+      margin-bottom: 25px;
     }
   }
 }
