--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -235,53 +235,66 @@
     }
   }
 
-  &-go-back {
-    padding: 18px 40px 18px 0px;
-    border: 1px solid $grayColor;
-    background: $whiteColor;
+  &__cart {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 17px;
     transition: all 0.3s linear;
+    width: 211px;
+    height: 55px;
 
-    span {
-      color: $grayColor;
-      font-size: 16px;
-      font-weight: 400;
+    @media (max-width: 767px) {
+      width: 195px;
+      height: 46px;
     }
 
-    svg {
-      margin-left: 30px;
-      margin-right: 10px;
+    @media (max-width: 479px) {
+      width: 70%;
     }
 
-    &:hover {
-      background: $blackColor;
+    &-go-back {
+      border: 1px solid $grayColor;
+      background: $whiteColor;
 
       span {
-        color: $whiteColor;
+        color: $grayColor;
+        font-size: 16px;
+        font-weight: 400;
       }
 
       svg {
-        path {
-          stroke: $whiteColor;
+        margin-right: 10px;
+      }
+
+      &:hover {
+        background: $blackColor;
+
+        span {
+          color: $whiteColor;
+        }
+
+        svg {
+          path {
+            stroke: $whiteColor;
+          }
         }
       }
     }
-  }
 
-  &-pay {
-    display: flex;
-    justify-content: center;
-    width: 215px;
-    border: 1px solid $grayColor;
-    background: $primaryColor;
-    transition: all 0.3s linear;
+    &-pay {
+      border: 1px solid $grayColor;
+      background: $primaryColor;
+      transition: all 0.3s linear;
 
-    span {
-      color: $whiteColor;
-      font-size: 16px;
-    }
+      span {
+        color: $whiteColor;
+        font-size: 16px;
+      }
 
-    &:hover {
-      background-color: $primaryHoverColor;
+      &:hover {
+        background-color: $primaryHoverColor;
+      }
     }
   }
 }
