add adaptive for cart

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -84,6 +84,10 @@
     font-weight: 800;
     text-transform: uppercase;
 
+    @media (max-width: 1024px) {
+      font-size: 22px;
+    }
+
     @media (max-width: 767px) {
       font-size: 20px;
     }
