--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -158,6 +158,11 @@
     &:active {
       transform: translateY(2px);
     }
+
+    @media (max-width: 767px) {
+      width: 29px;
+      height: 29px;
+    }
   }
 
   &__full-pizza {
