--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -14,15 +14,30 @@
     margin-top: 15px;
   }
 
+  @media (max-width: 479px) {
+  }
+
   &__container {
     max-width: 820px;
     margin: 0px auto;
+
+    @media (max-width: 575px) {
+      padding: 0px 10px;
+    }
+
+    @media (max-width: 479px) {
+      padding: 0px;
+    }
   }
 
   &__top {
     display: flex;
     justify-content: space-between;
     margin-bottom: 30px;
+
+    @media (max-width: 479px) {
+      padding: 0px 4px;
+    }
   }
 
   &__title {
@@ -31,13 +46,18 @@
     color: $blackColor;
     font-size: 32px;
     font-style: normal;
+    margin-right: 5px;
 
     @media (max-width: 1024px) {
-      font-size: 29px;
+      font-size: 28px;
     }
 
     @media (max-width: 767px) {
       font-size: 26px;
+    }
+
+    @media (max-width: 575px) {
+      font-size: 24px;
     }
 
     img {
@@ -52,6 +72,16 @@
         object-fit: contain;
         margin-right: 10px;
       }
+
+      @media (max-width: 575px) {
+        height: 22px;
+        width: 22px;
+        margin-right: 5px;
+      }
+
+      @media (max-width: 479px) {
+        display: none;
+      }
     }
   }
 
@@ -65,6 +95,10 @@
 
     svg {
       margin-right: 5px;
+
+      @media (max-width: 479px) {
+        margin-right: 0px;
+      }
     }
 
     path {
@@ -93,6 +127,10 @@
     font-size: 22px;
     font-weight: 400;
 
+    span {
+      margin-right: 5px;
+    }
+
     p {
       b {
         color: $primaryColor;
@@ -106,6 +144,14 @@
 
     @media (max-width: 575px) {
       font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    @media (max-width: 479px) {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 5px;
+      margin-bottom: 20px;
     }
   }
 
